finish with styling of project, finished for now

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<header class="signIn">
 		<div class="signInText">
 			<p>Already have an Intuit account?</p>
-			<h3><a href="https://accounts.intuit.com/account-recovery.html?offering_id=Intuit.ifs.mint&namespace_id=50000026&redirect_url=https%3A%2F%2Fmint.intuit.com%2Foverview.event%3Ftask%3DS" target="_blank">I forgot my User ID or Password</a></h3>
+			<h3><a class="hoverLink" href="https://accounts.intuit.com/account-recovery.html?offering_id=Intuit.ifs.mint&namespace_id=50000026&redirect_url=https%3A%2F%2Fmint.intuit.com%2Foverview.event%3Ftask%3DS" target="_blank">I forgot my User ID or Password</a></h3>
 		</div>
 		<a href="https://accounts.intuit.com/index.html?offering_id=Intuit.ifs.mint&namespace_id=50000026&redirect_url=https%3A%2F%2Fmint.intuit.com%2Foverview.event%3Ftask%3DS" target="_blank">
 			<button type="button" class="headerButton">
@@ -56,8 +56,8 @@
 			<h1 class="createHeading">Create an Intuit account</h1>
 			<div class="formInfo">
 				<h3>One account for everything Intuit, including <br>
-					Mint. <a target="_blank" href="https://accounts-help.intuit.com/app/intuit/1995107">Learn more</a></h3>
-				<h3>Already have an account? <a target="_blank" href="https://accounts.intuit.com/index.html?offering_id=Intuit.ifs.mint&namespace_id=50000026&redirect_url=https%3A%2F%2Fmint.intuit.com%2Foverview.event%3Ftask%3DS">Sign In</a></h3>
+					Mint. <a class="hoverLink" target="_blank" href="https://accounts-help.intuit.com/app/intuit/1995107">Learn more</a></h3>
+				<h3 class="signInTextSmall">Already have an account? <a class="hoverLink" target="_blank" href="https://accounts.intuit.com/index.html?offering_id=Intuit.ifs.mint&namespace_id=50000026&redirect_url=https%3A%2F%2Fmint.intuit.com%2Foverview.event%3Ftask%3DS">Sign In</a></h3>
 			</div>
 			<form class="signUpForm">
 				<fieldset>
@@ -87,21 +87,21 @@
 				</fieldset>
 			</form>
 			<div class="disclaimer">
-				<p><em>By selecting Create account, you agree to our <a target="_blank" href="https://mint.intuit.com/terms">Terms</a> and <br>
-					have read and acknowledge our <a target="_blank" href="https://www.intuit.com/privacy/statement/">Global Privacy<br>
+				<p><em>By selecting Create account, you agree to our <a class="hoverLink" target="_blank" href="https://mint.intuit.com/terms">Terms</a> and <br>
+					have read and acknowledge our <a class="hoverLink" target="_blank" href="https://www.intuit.com/privacy/statement/">Global Privacy<br>
 					Statement.</a></em></p>
 				<p class="updateNotifier"><em>Updates effective on January 10, 2022</em></p>
 			</div>
 			<div class="privacyPolicy">
-				<p>Invisible reCAPTCHA by Google <a target="_blank" href="https://policies.google.com/privacy?hl=en">Privacy Policy</a> and <a target="_blank" href="https://policies.google.com/terms?hl=en">Terms of Use</a>.</p>
+				<p>Invisible reCAPTCHA by Google <a class="hoverLink" target="_blank" href="https://policies.google.com/privacy?hl=en">Privacy Policy</a> and <a class="hoverLink" target="_blank" href="https://policies.google.com/terms?hl=en">Terms of Use</a>.</p>
 			</div>
 		</section>
 	</main>
 	<section class="formFooter">
 		<ul class="footerLinks">
-			<li><a target="_blank" href="https://www.intuit.com/legal/">Legal</a></li>
-			<li class="linkSpacing"><a target="_blank" href="">Privacy</a></li>
-			<li class="linkSpacing"><a target="_blank">Security</a></li>
+			<li><a class="formFooterLink" target="_blank" href="https://www.intuit.com/legal/">Legal</a></li>
+			<li class="linkSpacing"><a class="formFooterLink" target="_blank" href="https://www.intuit.com/privacy/statement/">Privacy</a></li>
+			<li class="linkSpacing"><a class="formFooterLink" target="_blank" href="https://security.intuit.com/">Security</a></li>
 		</ul>
 		<p class="copyrightReminder">&copy; Intuit, Inc. All rights reserved. Intuit, QuickBooks, QB, TurboTax, ProConnect and Mint are registered
 			trademarks of
@@ -109,7 +109,7 @@
 		<p class="termsAndCondition">Terms and conditions, features, support, pricing, and service options subject to change without notice.</p>
 	</section>
 	<footer>
-		<a class="footerSettings">Privacy Settings</a>
+		<a class="footerSettings" href="">Privacy Settings</a>
 	</footer>
 </body>
 
